@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.8 2005/09/28 12:09:03 rillig Exp $
+# $NetBSD: Makefile,v 1.9 2006/01/21 13:08:37 rillig Exp $
 
-DISTNAME=		mod_auth_pgsql-2.0.2b1
+DISTNAME=		mod_auth_pgsql-2.0.3
 PKGNAME=		${DISTNAME:S/^mod-/ap2/:S/_/-/g}
-PKGREVISION=		2
 CATEGORIES=		www databases
 MASTER_SITES=		http://www.giuseppetanzilli.it/mod_auth_pgsql2/dist/
 
